# template-dspy-redis

./: Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: docker.yml
src/example_dspy_redis/: app.py  dspy_extractor.py  publish.py  redis_client.py
src/rename_me/: main.py
