[project]
name = "rename_me"
version = "0.1.0"
description = "A template project using Python, uv, Docker and GitHub Actions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1",
]

[project.scripts]
main = "rename_me.main:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
